force-app/main/default/objects/Sample_Order__c/Sample_Order__c.object-meta.xml
<CustomObject>
    <label>Sample Order</label>
    <nameField>
        <displayFormat>Sample-{0000}</displayFormat>
        <label>Sample Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>