force-app/main/default/objects/Sample_Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sample Orders</relationshipLabel>
    <relationshipName>Sample_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>