force-app/main/default/objects/Sample_Order__c/fields/FeedbackNotes__c.field-meta.xml
<CustomField>
    <fullName>FeedbackNotes__c</fullName>
    <label>Feedback Notes</label>
    <type>TextArea</type>
</CustomField>