force-app/main/default/objects/Sample_Order__c/fields/FeedbackRating__c.field-meta.xml
<CustomField>
    <fullName>FeedbackRating__c</fullName>
    <label>Feedback Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>