force-app/main/default/objects/Sample_Order__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Product Launch</fullName>
            </value>
            <value>
                <fullName>Product Trial</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Complaint Resolution</fullName>
            </value>
            <value>
                <fullName>Relationship Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>