force-app/main/default/objects/Sample_Order__c/fields/RequestedDate__c.field-meta.xml
<CustomField>
    <fullName>RequestedDate__c</fullName>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>